--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   background-color: #191825;
 }
 
+/* Circle */
 .circle {
   width: 6rem;
   height: 6rem;
@@ -35,4 +36,26 @@ body {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+
+/* logo */
+.logo-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.logo {
+  font-size: 36rem;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-image: url(sky.jpg);
+  filter: blur(0.3px);
+  opacity: 60%;
+  background-size: cover;
+  -webkit-filter: blur(0.3px);
 }
