--- a/style.css
+++ b/style.css
@@ -14,6 +14,26 @@ body {
   overflow: hidden;
 }
 
+/* SVG */
+svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  stroke-dashoffset: 1000000000px;
+  stroke-dasharray: 1000000000px;
+  opacity: 0;
+}
+
+.svg-animation {
+  animation: svgAnimation 10s cubic-bezier(0.075, 0.82, 0.165, 1) both;
+  -webkit-animation: svgAnimation 10s cubic-bezier(0.075, 0.82, 0.165, 1) both;
+}
+
 .background {
   width: 100%;
   height: 100%;
@@ -82,7 +102,7 @@ body {
 
 .black-card {
   width: 220px;
-  height: 300px;
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,4 +173,18 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   letter-spacing: 12px;
+}
+
+/* Animations */
+@keyframes svgAnimation {
+  to {
+    stroke-dasharray: 450px;
+    transform: translate(-25%, -25%);
+    scale: 2;
+    -webkit-transform: translate(-25%, -25%);
+    -moz-transform: translate(-25%, -25%);
+    -ms-transform: translate(-25%, -25%);
+    -o-transform: translate(-25%, -25%);
+    opacity: 1;
+  }
 }
